--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ Pods
 Podfile.lock
 Build
 xcuserdata
+main.zip
+ios/IntuneMAMConfigurator
+ios/IntuneMAMSwift.xcframework
+ios/IntuneMAMSwiftStub.xcframework
+ios/IntuneMAMResources.bundle
 
 # macOS files
 .DS_Store
