--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intune",
+  "name": "@fellow/intune",
   "version": "0.0.1",
   "description": "A plugin for using Microsoft Intune within Capacitor iOS & Android apps",
   "main": "dist/plugin.cjs.js",
@@ -35,13 +35,14 @@
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
     "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
     "eslint": "eslint . --ext ts",
-    "prettier": "prettier \"**/*.{css,html,ts,js,java}\"",
+    "prettier": "prettier --write \"**/*.{css,html,ts,js,java}\"",
     "swiftlint": "node-swiftlint",
     "docgen": "docgen --api IntunePlugin --output-readme README.md --output-json dist/docs.json",
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "install": "node install.mjs"
   },
   "devDependencies": {
     "@capacitor/android": "^5.0.0",
@@ -52,6 +53,8 @@
     "@ionic/prettier-config": "^1.0.1",
     "@ionic/swiftlint-config": "^1.1.2",
     "eslint": "^7.11.0",
+    "node-fetch": "^3.3.2",
+    "node-stream-zip": "^1.15.0",
     "prettier": "~2.3.0",
     "prettier-plugin-java": "~1.0.2",
     "rimraf": "^3.0.2",
