--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "android/build.gradle",
     "dist/",
     "ios/Plugin/",
-    "Intune.podspec"
+    "Intune.podspec",
+    "install.mjs"
   ],
   "author": "Fellow Insights Inc",
   "license": "UNLICENCED",
