--- a/package.json
+++ b/package.json
@@ -54,8 +54,6 @@
     "@ionic/prettier-config": "^1.0.1",
     "@ionic/swiftlint-config": "^1.1.2",
     "eslint": "^7.11.0",
-    "node-fetch": "^3.3.2",
-    "node-stream-zip": "^1.15.0",
     "prettier": "~2.3.0",
     "prettier-plugin-java": "~1.0.2",
     "rimraf": "^3.0.2",
@@ -78,5 +76,9 @@
     "android": {
       "src": "android"
     }
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2",
+    "node-stream-zip": "^1.15.0"
   }
 }
