--- a/ios/Plugin.xcodeproj/xcshareddata/xcschemes/Plugin.xcscheme
+++ b/ios/Plugin.xcodeproj/xcshareddata/xcschemes/Plugin.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "50ADFF87201F53D600D50D53"
-               BuildableName = "Plugin"
+               BuildableName = "Plugin.framework"
                BlueprintName = "Plugin"
                ReferencedContainer = "container:Plugin.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "50ADFF90201F53D600D50D53"
-               BuildableName = "PluginTests"
+               BuildableName = "PluginTests.xctest"
                BlueprintName = "PluginTests"
                ReferencedContainer = "container:Plugin.xcodeproj">
             </BuildableReference>
@@ -61,7 +61,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "50ADFF87201F53D600D50D53"
-            BuildableName = "Plugin"
+            BuildableName = "Plugin.framework"
             BlueprintName = "Plugin"
             ReferencedContainer = "container:Plugin.xcodeproj">
          </BuildableReference>
