add api to check if Intune is supported on the current platform

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "android/build.gradle",
     "dist/",
     "ios/Plugin/",
-    "Intune.podspec",
+    "FellowIntune.podspec",
     "install.mjs"
   ],
   "author": "Fellow Insights Inc",
